--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="card">
+    <div class="top-banner">
+      <img src="images/bg-pattern-card.svg" alt="card-pattern">
+    </div>
 
-  80K
-  Followers
+    <div class="info">
+      <h3>Victor Crest <span class="age">26</span></h3>
+      <h4 class="city">London</h4>
+    </div>
 
-  803K
-  Likes
+    <hr>
 
-  1.4K
-  Photos
+
+
+    <div class="stats">
+
+      <p class="followers">80K
+        <span class="stats-label">Followers</span></p>
+
+      <p class="likes">803K
+        <span class="stats-label">Likes</span></p>
+
+      <p class="photos">1.4K
+        <span class="stats-label">Photos</span></p>
+    </div>
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Vernon Dodo</a>.
   </div>
 </body>
+
 </html>
