--- a/index.html
+++ b/index.html
@@ -12,35 +12,46 @@
 </head>
 
 <body>
-  <div class="card">
-    <div class="top-banner">
-      <img src="images/bg-pattern-card.svg" alt="card-pattern">
+  <div class="card-container">
+    <div class="card">
+      <div class="top-banner">
+        <img src="images/bg-pattern-card.svg" alt="card-pattern">
+      </div>
+      <div class="profile-pic">
+        <img class="profile-pic" src="./images/image-victor.jpg" alt="profile-pic" />
+      </div>
+      <div class="bottom-banner">
+        <div class="info">
+          <p class="name">Victor Crest <span class="age">26</span></p>
+          <p class="city">London</p>
+        </div>
+        <!--hr-->
+        <div class="stats">
+          <div>
+            <p class="followers">80K
+              <span class="stats-label">Followers</span>
+            </p>
+          </div>
+          <div>
+            <p class="likes">803K
+              <span class="stats-label">Likes</span>
+            </p>
+          </div>
+          <div>
+            <p class="photos">1.4K
+              <span class="stats-label">Photos</span>
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <div class="info">
-      <h3>Victor Crest <span class="age">26</span></h3>
-      <h4 class="city">London</h4>
+    <br>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Vernon Dodo</a>.
     </div>
-
-    <hr>
-
-
-
-    <div class="stats">
-
-      <p class="followers">80K
-        <span class="stats-label">Followers</span></p>
-
-      <p class="likes">803K
-        <span class="stats-label">Likes</span></p>
-
-      <p class="photos">1.4K
-        <span class="stats-label">Photos</span></p>
-    </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Vernon Dodo</a>.
   </div>
 </body>
 
