Further HTML changes and CSS styling for the layout

--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 <body>
   <div class="card-container">
     <div class="card">
-      <div class="top-banner">
-        <img src="images/bg-pattern-card.svg" alt="card-pattern">
-      </div>
-      <div class="profile-pic">
+      <div class="profile-header">
         <img class="profile-pic" src="./images/image-victor.jpg" alt="profile-pic" />
       </div>
-      <div class="bottom-banner">
-        <div class="info">
+      <div class="info-panel">
+        <div class="info-container">
           <p class="name">Victor Crest <span class="age">26</span></p>
           <p class="city">London</p>
         </div>
         <!--hr-->
         <div class="stats">
-          <div>
+          <div class="stats-container">
             <p class="followers">80K
               <span class="stats-label">Followers</span>
             </p>
