--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="card">
     <div class="card-header">
-      <img class="card-image" src="images/image-victor.jpg">
+      <img class="card-image" src="images/image-victor.jpg" alt="profile-image">
     </div>
     <div class="card-content">
       <p class="name">Victor Crest <span class="age">26</span></p>
